[gd_scene load_steps=8 format=3 uid="uid://ciayleafji314"]

[ext_resource type="Texture2D" uid="uid://cr8ntn5rmaj3d" path="res://img/tileMask.png" id="1_tn8l1"]
[ext_resource type="Script" path="res://scripts/app_tile.gd" id="2_hvahi"]
[ext_resource type="Texture2D" uid="uid://dfbk87fdociha" path="res://img/lorenzo-herrera-vintage-gray-game-console-and-joystick-unsplash.jpg" id="3_ay88o"]
[ext_resource type="Texture2D" uid="uid://ci145bpvbolff" path="res://img/selectMask.png" id="3_f8ky5"]

[sub_resource type="Animation" id="Animation_wd1g1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Select:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleBG:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(415, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleBG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 250)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Image:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_qqpyb"]
resource_name = "select"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Select:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleBG:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(415, 100), Vector2(415, 350)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleBG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 250), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Image:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xonsj"]
_data = {
"RESET": SubResource("Animation_wd1g1"),
"select": SubResource("Animation_qqpyb")
}

[node name="AppTile" type="TextureButton"]
clip_children = 2
custom_minimum_size = Vector2(415, 350)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_tn8l1")
texture_pressed = ExtResource("1_tn8l1")
texture_hover = ExtResource("1_tn8l1")
texture_disabled = ExtResource("1_tn8l1")
texture_focused = ExtResource("1_tn8l1")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_hvahi")

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(124, 105)
texture = ExtResource("3_ay88o")
expand_mode = 1
stretch_mode = 6

[node name="TitleBG" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(0.0823529, 0.105882, 0.137255, 0.847059)

[node name="Title" type="RichTextLabel" parent="TitleBG"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -11.0
offset_right = -18.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "[center]Game"
fit_content = true
scroll_active = false

[node name="Select" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 15.0
offset_right = -17.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_f8ky5")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xonsj")
}

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
